--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sync-fw (0.5.26) unstable; urgency=low
+
+  * Unit test case fixes and improvements.
+
+ -- Sudheer Kumar Chiluveri <sudheer.chiluveri@nokia.com>  Fri, 29 Apr 2011 11:06:04 +0300
+
 sync-fw (0.5.25) stable; urgency=low
 
   * Remove build and compile time dependency on libqttracker.
